# nodeguard

./: Cargo.toml  README.md
src/: Cargo.toml
src/agent/: Cargo.toml
src/agent-admin/: Cargo.toml
src/plugins/: Cargo.toml
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/static/: index.html
src/tools/: Cargo.toml
