[package]
name = "nodeguard"

# When releasing to crates.io:
# - Update html_root_url.
# - Update CHANGELOG.md.
# - Create "v0.0.x" git tag.
version = "0.0.1"
authors = ["tempbottle <tempbottle@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tempbottle/nodeguard"
homepage = ""
documentation = ""
description = """
.
"""
categories = ["", ""]
keywords = ["", "", "", ""]

[workspace]

members = [
  "./",
  "agent",
  "agent-admin",
  "plugins",
  "server",
  "tools",
]

[badges]


[dependencies]


[dev-dependencies]

